--- a/src/main/resources/templates/admin/AddInterview.html
+++ b/src/main/resources/templates/admin/AddInterview.html
@@ -27,7 +27,7 @@
 <div id="res">
     <h2>分配面试</h2>
     <hr>
-    <div class="card">
+    <div class="card shadow h-100">
         <div class="card-header">
             <span>分配面试</span>
         </div>
