--- a/src/main/resources/templates/admin/AdminPersonalProfile.html
+++ b/src/main/resources/templates/admin/AdminPersonalProfile.html
@@ -83,7 +83,8 @@
                                     <p>账户类型</p>
                                 </div>
                                 <div class="col-md-10">
-                                    <span th:if="${session.USER_INFO.role} eq 'ROLE_ADMIN'"><i class="fa fa-user"></i>管理员（<a href="#">更改</a>）</span>
+                                    <span th:if="${session.USER_INFO.role} eq 'ROLE_ADMIN'"><i class="fa fa-user"></i>管理员（<a
+                                            href="#">更改</a>）</span>
                                     <span th:if="${session.USER_INFO.role} eq 'ROLE_USER'"><i class="fa fa-user"></i>代表</span>
                                 </div>
                             </div>
@@ -196,7 +197,7 @@
                                     <label for="password-before">原始密码</label>
                                 </div>
                                 <div class="col-md-10">
-                                    <input type="password" id="password-before" disabled>
+                                    <input type="password" id="password-before" disabled class="form-control">
                                 </div>
                             </div>
                             <div class="row mt-4">
@@ -204,7 +205,9 @@
                                     <label for="password-after">新密码</label>
                                 </div>
                                 <div class="col-md-10">
-                                    <input type="password" id="password-after" disabled>
+                                    <input type="password" id="password-after" disabled
+                                           onkeyup="passwordPatternCheck()" class="form-control">
+                                    <span id="passwordInfo"></span>
                                 </div>
                             </div>
                             <div class="row mt-4">
@@ -212,18 +215,24 @@
                                     <label for="password-confirm">确认密码</label>
                                 </div>
                                 <div class="col-md-10">
-                                    <input type="password" id="password-confirm" disabled>
+                                    <input type="password" id="password-confirm" disabled class="form-control">
+                                    <span id="confirmInfo"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-primary mt-1" id="changePasswordButton" onclick="changePassword()">
+                            <button class="btn btn-primary mt-1" id="changePasswordButton"
+                                    onclick="changePassword()">
                                 修改密码
                             </button>
                             <div class="btn-group mt-1" id="changePassBtnGroup" hidden>
-                                <button class="btn btn-primary"><i class="fa fa-check"></i>确认修改</button>
-                                <button class="btn btn-secondary" onclick="cancelChangePassword()"><i
-                                        class="fa fa-close"></i>取消修改
+                                <button class="btn btn-primary" id="submitPasswordButton"
+                                        onclick="submitPassword()">
+                                    <i class="fa fa-check"></i>确认修改
+                                </button>
+                                <button class="btn btn-secondary"
+                                        onclick="cancelChangePassword()">
+                                    <i class="fa fa-close"></i>取消修改
                                 </button>
                             </div>
                         </div>
@@ -248,6 +257,55 @@
             uploadImg(this);
         })
     });
+
+    function passwordPatternCheck() {
+        pattern = /[a-zA-Z0-9]{6,16}/;
+        var password = $("#password-after").val();
+        if (pattern.test(password)) {
+            $("#passwordInfo").html("<i class='fa fa-check'></i>").css("color", "green");
+        } else {
+            $("#submitPasswordButton").attr("disabled", "disabled");
+            $("#passwordInfo").text("密码必须包含大写字母小写字母和数字").css("color", "red")
+        }
+    }
+
+    function passwordCheck() {
+        var passwordAfter = $("#password-after").val();
+        var passwordConfirm = $("#password-confirm").val();
+        if (passwordAfter === passwordConfirm) {
+            $("#confirmInfo").html("<i class='fa fa-check'></i>").css("color", "green");
+            $("#submitPasswordButton").removeAttr("disabled")
+        } else {
+            $("#confirmInfo").text("两次密码不一致").css("color", "red")
+        }
+    }
+
+    function submitPassword() {
+        var delegateID = [[${session.USER_INFO.id}]];
+        var passwordOld = $('#password-before').val();
+        var passwordNew = $('#password-after').val();
+        if (confirm('确认更改密码')) {
+            $.ajax({
+                type: 'POST',
+                url: '/user/passwordChange',
+                dataType: 'json',
+                data: {
+                    'id': delegateID,
+                    'passwordOld': passwordOld,
+                    'passwordNew': passwordNew
+                },
+                success: function (data) {
+                    if (data['status'] === 'SUCCESS') {
+                        alert('修改密码成功，请重新登录');
+                        window.location.href = "/logout";
+                    } else if (data['status'] === 'ERROR') {
+                        alert(data['info']);
+                        window.location.reload()
+                    }
+                }
+            })
+        }
+    }
 </script>
 <script>
     function getData() {
@@ -278,12 +336,9 @@
     }
 
     function cancelChangePassword() {
-        $('#password-before').attr('disabled', 'disabled');
-        $('#password-before').val("");
-        $('#password-after').attr('disabled', 'disabled');
-        $('#password-after').val("");
-        $('#password-confirm').attr('disabled', 'disabled');
-        $('#password-confirm').val("");
+        $('#password-before').attr('disabled', 'disabled').val("");
+        $('#password-after').attr('disabled', 'disabled').val("");
+        $('#password-confirm').attr('disabled', 'disabled').val("");
         $('#changePassBtnGroup').attr('hidden', 'hidden');
         $('#changePasswordButton').removeAttr('hidden');
     }
@@ -344,9 +399,9 @@
 </script>
 <script th:inline="javascript">
     function cancelEdit(item, editButton, cancelButton) {
-        if(item==='#phone'){
+        if (item === '#phone') {
             $(item).val([[${session.USER_INFO.phone}]])
-        }else {
+        } else {
             $(item).val([[${session.USER_INFO.email}]])
         }
         $(item).attr("disabled", "disabled");
