--- a/src/main/resources/templates/user/UserGroupDetail.html
+++ b/src/main/resources/templates/user/UserGroupDetail.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-    <div th:if="${#strings.isEmpty(info)}" class="card">
+    <div th:if="${#strings.isEmpty(info)}" class="card shadow h-100">
         <div class="card-header">代表团信息</div>
         <div class="card-body">
             <table class="table table-hover">
