--- a/src/main/resources/templates/user/UserInterviewDetail.html
+++ b/src/main/resources/templates/user/UserInterviewDetail.html
@@ -28,7 +28,7 @@
     </div>
     <div th:if="${#strings.isEmpty(noInterview)}" class="row">
         <div class="col-md-6">
-            <div class="card">
+            <div class="card shadow h-100">
                 <div class="card-header">
                     面试信息
                 </div>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div class="card">
+            <div class="card shadow h-100">
                 <div class="card-header">
                     面试官信息
                 </div>
