--- a/src/main/resources/templates/admin/AddAdmin.html
+++ b/src/main/resources/templates/admin/AddAdmin.html
@@ -24,7 +24,7 @@
 <div id="res">
     <h1>添加管理员</h1>
     <hr>
-    <div class="card">
+    <div class="card shadow h-100">
         <div class="card-header"></div>
         <div class="card-body">
             <div class="mt-2">
