--- a/src/main/resources/templates/admin/AddCommittee.html
+++ b/src/main/resources/templates/admin/AddCommittee.html
@@ -25,7 +25,7 @@
 <div id="res">
     <h3>委员会管理</h3>
     <hr>
-    <div class="card">
+    <div class="card shadow h-100">
         <div class="card-header">
             <span>添加委员会</span>
         </div>
