--- a/src/main/resources/templates/admin/AddSchool.html
+++ b/src/main/resources/templates/admin/AddSchool.html
@@ -25,7 +25,7 @@
 <div id="res">
     <h3>学校管理</h3>
     <hr>
-    <div class="card">
+    <div class="card shadow h-100">
         <div class="card-header">
             <span>添加学校信息</span>
         </div>
