--- a/src/main/resources/templates/admin/AddSeat.html
+++ b/src/main/resources/templates/admin/AddSeat.html
@@ -25,7 +25,7 @@
 <div id="res">
     <h3>添加席位</h3>
     <hr>
-    <div class="card">
+    <div class="card shadow h-100">
         <div class="card-header">
             添加席位
         </div>
