--- a/src/main/resources/templates/admin/InterviewDetail.html
+++ b/src/main/resources/templates/admin/InterviewDetail.html
@@ -27,7 +27,7 @@
     <hr>
     <div class="row">
         <div class="col-6">
-            <div class="card">
+            <div class="card shadow h-100">
                 <div class="card-header">
                     面试详细信息
                 </div>
