--- a/src/main/resources/templates/admin/MemberDetail.html
+++ b/src/main/resources/templates/admin/MemberDetail.html
@@ -28,7 +28,7 @@
     <h2>代表详细信息</h2>
     <div class="row">
         <div class="col-md-6">
-            <div class="card" th:object="${delegate}">
+            <div class="card shadow h-100" th:object="${delegate}">
                 <div class="card-header">
                     <img class="rounded-circle" src="../img/head/test.png" alt="" style="width: 3em;height: 3em"><span
                         class="ml-2" th:text="${delegate.name}"></span>
