--- a/src/main/resources/templates/admin/ModifyGroup.html
+++ b/src/main/resources/templates/admin/ModifyGroup.html
@@ -24,7 +24,7 @@
 <div id="res" hidden="hidden">
     <h1>代表团管理</h1>
     <hr>
-    <div class="card">
+    <div class="card shadow h-100">
         <div class="card-header">修改代表团</div>
         <div class="card-body">
             <div class="mt-2">
